# thoth

./: .eslintrc  README.md  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  vite.config.ts
src/: App.tsx  SearchBar.tsx  SearchResults.tsx  index.css  main.tsx  things.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src/components/ui/: command.tsx
