[package]
name = "thoth"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-execute", "shell-open", "window-set-size"] }
serde = { version = "1.0", features = ["derive"] }
freedesktop_entry_parser = "1.3.0"
serde_json = "1.0"
levenshtein = "1.0.5"
tauri-plugin-positioner = "1.0"
fuzzy-matcher = "0.3.7"

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"
branch = "dev"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
