[package]
name = "thoth"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-execute", "shell-open", "system-tray", "window-center", "window-hide", "window-set-always-on-top", "window-set-focus", "window-set-size", "window-set-skip-taskbar", "window-show"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
levenshtein = "1.0.5"
tauri-plugin-positioner = "1.0"
fuzzy-matcher = "0.3.7"
rust_search = "2.1.0"

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"
branch = "dev"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
